<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        style="@style/textView_main"
        android:id="@+id/textView_main_firstNumber"
        android:text="@string/firstNumberText_main"
        />

    <EditText
        style="@style/editText_main"
        android:id="@+id/editText_main_firstNumber"
        android:layout_below="@id/textView_main_firstNumber"
        />
    <TextView
        style="@style/textView_main"
        android:id="@+id/textView_main_secondNumber"
        android:layout_below="@id/editText_main_firstNumber"
        android:text="@string/secondNumberText_main"
        />

    <EditText
        style="@style/editText_main"
        android:id="@+id/editText_main_secondNumber"
        android:layout_below="@id/textView_main_secondNumber"
        />

    <LinearLayout
        android:id="@+id/buttonLinearLayout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_main_secondNumber">
        <Button
            style="@style/buttons_main"
            android:id="@+id/buttonSum_main"
            android:text="@string/plusSing"
            />
        <Button
            style="@style/buttons_main"
            android:id="@+id/buttonSub_main"
            android:text="@string/minusSing"
            />
        <Button
            style="@style/buttons_main"
            android:id="@+id/buttonMul_main"
            android:text="@string/multiplySing"
            />
        <Button
            style="@style/buttons_main"
            android:id="@+id/buttonDiv_main"
            android:text="@string/devideSing"
            />
    </LinearLayout>

    <TextView
        style="@style/textViewResult_main"
        android:layout_below="@id/buttonLinearLayout_main"
        android:id="@+id/textViewResult_main"
        />



</RelativeLayout>